--- a/RockPaperScissors/Base.lproj/Main.storyboard
+++ b/RockPaperScissors/Base.lproj/Main.storyboard
@@ -168,7 +168,22 @@
                     <view key="view" contentMode="scaleToFill" id="xJw-qT-rbn">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Hxf-HA-cWX">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="NeZ-ow-hBs" id="bhg-qt-CQp"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="RCb-19-b2G" firstAttribute="top" secondItem="Hxf-HA-cWX" secondAttribute="bottom" id="21s-Zm-Mhr"/>
+                            <constraint firstItem="Hxf-HA-cWX" firstAttribute="leading" secondItem="xJw-qT-rbn" secondAttribute="leading" id="GjQ-tu-riA"/>
+                            <constraint firstItem="Hxf-HA-cWX" firstAttribute="top" secondItem="AAd-UV-4xI" secondAttribute="bottom" id="Rau-Qf-Z1I"/>
+                            <constraint firstAttribute="trailing" secondItem="Hxf-HA-cWX" secondAttribute="trailing" id="aOG-hg-c3J"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yo8-y8-ku6" userLabel="First Responder" sceneMemberID="firstResponder"/>
